--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,20 +7,20 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #1e7ca6; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
+#top-header { background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #1e7ca6; color: #FFF; }
+#top-header #primary-nav ul li a { color: #1e7ca6; }
 #top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
-#headline h3 { color: #FFF; font-size: 1.5em; }
+#about-subscribe { background-color: #69c9f3; }
+#about-subscribe h2 { color: #FFF; font-size: 1.3em; text-shadow: 1px 1px #4EB2DE; }
+#headline { background: #69c9f3; }
+#headline h3 { color: #FFF; font-size: 1.3em; text-shadow: 1px 1px #4EB2DE; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
@@ -38,33 +38,38 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #1e7ca6;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #1e7ca6;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #1e7ca6; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #69c9f3; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
-#scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #d53140;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #e86d5f;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
-#scroll-top a i { color: #FFF; }
-#scroll-top a:hover i { color: #FFF; }
+#scroll-top a { background: #FFF; }
+#scroll-top a:hover { background-color: #FFF; }
+#scroll-top a i { color: #1e7ca6; }
+#scroll-top a:hover i { color: #69c9f3; }
+
+/* Custom */
+#top-header #primary-nav { padding: 13px 0px; }
+@media (max-width: 767px) {
+  #top-header #primary-nav { padding: 0 !important; }
+}
