--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,24 +7,24 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #525252; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
-#top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
-#headline h3 { color: #FFF; font-size: 1.5em; }
+#top-header { border-bottom: 2px solid #efefef;  background-image: url("../images/bg.png"); }
+#top-header #primary-nav ul li.current_page_item a { background-color: #fff; color: #959595; }
+#top-header #primary-nav ul li a { color: #ffffff; }
+#top-header #primary-nav ul li a:hover { color: #959595; background-color: #fff; }
+#about-subscribe { background-color: #efefef; }
+#about-subscribe h2 { color: #525252; }
+#headline { background: #efefef; }
+#headline h3 { color: #959595; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3 a { color: #517E93; }
+.blog-post h3 a { color: #959595; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -37,34 +37,34 @@ h3 { font-size: 1.35em; }
   color: #6B6B6B;
 }
 .read-more {
-  background-color: #EAEAEA;
-  color: #3f98b5;
+  background-color: #d2d2d2;
+  color: #fff;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #ff4f0f;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
-footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
-footer #bottom-footer { background-color: #27282C; color: #FFF; }
+footer #top-footer { background-color: #e5e5e5; color: #FFF; }
+footer #top-footer #social-icons li a, #top-footer h3, #top-footer a, #top-footer p { color: #959595; }
+footer #top-footer #social-icons li a:hover { color: #525252; }
+footer #bottom-footer { background-color: #525252; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #959595;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #ff4f0f;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #959595; }
+#scroll-top a:hover { background-color: #525252; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
