--- a/assets/css/core-wp.css
+++ b/assets/css/core-wp.css
@@ -14,6 +14,10 @@ a img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .wp-caption p.wp-caption-text { font-size: 11px; line-height: 17px; margin: 0; padding: 0 4px 5px; }
 em, i { font-style: italic; }
 ol li { list-style-type: decimal; list-style-position: inside; }
+sub {
+  vertical-align: sub;
+  font-size: smaller;
+}
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
