--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,8 +7,8 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #a3a3a3; }
-a { color: #E1261D; }
-a:hover { color: #E1261D; text-decoration: underline; }
+a { color: #e0251c; }
+a:hover { color: #e0251c; text-decoration: underline; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
@@ -17,13 +17,13 @@ h3 { font-size: 1.35em; }
 #top-header { background-color: #fff; }
 #top-header .container { padding: 0; }
 #top-header hgroup a img { padding: 15px 0; float: left; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #E1261D; color: #FFFFFF; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #e0251c; color: #FFFFFF; }
 #top-header #primary-nav ul li a { border-radius: 0; background-color: #ffffff; color: #A3A3A3; margin: 0; padding: 0 20px; line-height: 100px; display: inline-block; }
-#top-header #primary-nav ul li a:hover { background-color: #E1261D; color: #ffffff; }
+#top-header #primary-nav ul li a:hover { background-color: #e0251c; color: #ffffff; }
 
 #about-subscribe { background-color: #EBEBEB; }
 #about-subscribe .container { padding: 20px 0 10px; }
-#about-subscribe h2 { color: #A3A3A3; font-size: 1.33em; line-height: 63px; }
+#about-subscribe h2 { color: #A3A3A3; font-size: 1.35em; line-height: 1.4em; }
 #about-subscribe h3 { font-size: 1em; line-height: 1em; }
 
 #headline { background: #EBEBEB; }
@@ -32,8 +32,8 @@ h3 { font-size: 1.35em; }
 /* Post */
 .blog-post .post-meta { color: #AAA; }
 .blog-post h3 { font-weight: 200; }
-.blog-post h3 a { color: #E1261D; text-decoration: none; }
-.blog-post h3 a:hover { color: #E1261D; text-decoration: underline; }
+.blog-post h3 a { color: #e0251c; text-decoration: none; }
+.blog-post h3 a:hover { color: #e0251c; text-decoration: underline; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -46,18 +46,18 @@ h3 { font-size: 1.35em; }
   color: #6B6B6B;
 }
 .read-more { color: #A3A3A3; background-color: #F7F7F7; }
-.read-more:hover { color: #E1261D; background-color: #F7F7F7; text-decoration: underline; }
+.read-more:hover { color: #e0251c; background-color: #F7F7F7; text-decoration: underline; }
 
 /* Footer */
 footer #top-footer { background-color: #fff; color: #a3a3a3; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #a3a3a3; }
-footer #top-footer #social-icons li a:hover { color: #E1261D; }
+footer #top-footer #social-icons li a:hover { color: #e0251c; }
 footer #bottom-footer { background-color: #a3a3a3; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
-#comments .comment-reply-link { background-color: #E1261D; color: #fff; }
+#comments .comment-reply-link { background-color: #e0251c; color: #fff; }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover { text-decoration: underline; }
 
@@ -71,8 +71,5 @@ input[type="submit"]:hover,
 #top-footer {}
 #dynamic-footer > .pure-u-1-3,
 #dynamic-footer > .pure-u-2-3 { width:100%; }
-#dynamic-footer > .pure-u-1-3 {}
-#dynamic-footer > .pure-u-2-3 {}
-
 #dynamic-footer  .l-box { text-align: center; }
-#dynamic-footer  .social-icons {}
+#dynamic-footer  .l-box p { font-size: 0.95em }
