--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,35 +5,29 @@ body {
   font-size: 16px;
   color: #4B4B4B;
   line-height: 1.7em;
+  background: url('../../assets/images/bg.jpg') no-repeat center top;
+  background-size: cover;
 }
 h1, h2, h3, h4 { color: #777; }
-a { color: #007093; }
+a { color: #49a4d4; }
 a:hover,
-a:focus { color: #008AB3; }
+a:focus { color: #377ca1; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-top: 20px solid #E0E0E0; background-color: #fff; }
+#top-header { background: none; }
 #top-header .container { padding: 0; }
-#top-header .container hgroup a img { float: left; margin: -10px 0 10px; height: 160px; }
+#top-header .container hgroup a img { float: left; margin: 30px 0 27px; }
 #top-header #primary-nav ul li { line-height: 10em; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #008AB3; color: #fff; }
-#top-header #primary-nav ul li a { background-color: #FFF; padding: .1em 1.5em 0; color: #333; line-height: 3em; display: inline-block;}
-#top-header #primary-nav ul li a:hover { background-color: #007DA3; color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #f18704; color: #fff; }
+#top-header #primary-nav ul li a { background-color: #FFF; padding: .1em 1.5em 0; color: #f18704; line-height: 3em; display: inline-block; margin-left: .5em; }
+#top-header #primary-nav ul li a:hover { background-color: #f18704; color: #fff; }
 #about-subscribe,
-#headline {
-  background-color: #007DA3;
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#007093), to(#008AB3));
-  background-image: -webkit-linear-gradient(top, #007093, #008AB3);
-  background-image: -moz-linear-gradient(top, #007093, #008ab3);
-  background-image: -ms-linear-gradient(top, #007093, #008ab3);
-  background-image: -o-linear-gradient(top, #007093, #008ab3);
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#007093', EndColorStr='#008ab3')";
-}
+#headline { background-color: #5A4C3C; }
 #about-subscribe .container { padding: 0; }
-#about-subscribe h2 { color: #fff; line-height: 85px; font-size: 24px; }
+#about-subscribe h2 { color: #fff; line-height: 22px; font-size: 16px; padding: 20px 0; }
 #headline h3 { color: #fff; font-size: 1.5em; }
 #about-subscribe .feedburner-area h3 { color: #E0E0E0; font-size: 16px; margin-top: 10px; }
 #about-subscribe .feedburner-area form p { margin: 0 0 15px 0; }
@@ -52,33 +46,34 @@ h3 { font-size: 1.35em; }
   color: #6B6B6B;
 }
 .read-more {
-  background-color: #008AB3;
+  background-color: #ef5861;
   color: #fff;
   padding: 1.1em 2em 1em;
 }
 .read-more:hover,
 .read-more:focus {
-  background-color: #007093;
+  background-color: #d64f58;
   color: #fff;
   text-decoration: underline;
 }
 
 /* Footer */
-footer #top-footer { background-color: #DBDBDB; color: #999; }
-footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #777; }
+footer #top-footer { background-color: #5A4C3C; color: #f7f7f7; }
+footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #fff; }
 footer #top-footer #social-icons li a:hover,
-footer #top-footer #social-icons li a:focus { color: #00A9EA; }
-footer #bottom-footer { background-color: #00A9EA; color: #FFF; }
+footer #top-footer #social-icons li a:focus { color: #f18704; }
+footer #bottom-footer { background-color: transparent; color: #5A4C3C; }
+
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
-#comments .comment-reply-link { color: #007093; background-color: #fff; border: 1px solid #00A9EA; font-weight: bold; padding: 9px 2em;}
+#comments .comment-reply-link { color: #fff; background-color: #f18704; border: 1px solid #f18704; font-weight: bold; padding: 9px 2em;}
 input[type="submit"]:hover,
-#comments .comment-reply-link:hover { background-color: #E0E0E0; color: #333; }
+#comments .comment-reply-link:hover { background-color: #d54f00; color: #fff; }
 
 input[type="text"], input[type="search"], input[type="email"] {
-  border-color: #00A9EA;
+  border-color: #f18704;
 }
 
 /* Scroll to top */
@@ -88,8 +83,9 @@ input[type="text"], input[type="search"], input[type="email"] {
 #scroll-top a:hover i { color: #FFF; }
 
 /* redesign footer */
-#top-footer {}
-#dynamic-footer > .pure-u-1-3,
-#dynamic-footer > .pure-u-2-3 { width:100%; }
-#dynamic-footer  .l-box { text-align: center; }
-#dynamic-footer  .l-box p { font-size: 0.95em }
+footer #top-footer { padding: 20px 0; }
+footer #dynamic-footer > .pure-u-1-3,
+footer #dynamic-footer > .pure-u-2-3 { width:100%; }
+footer #dynamic-footer  .l-box { text-align: center; }
+footer #dynamic-footer  .l-box p { font-size: 0.95em }
+footer #bottom-footer p { text-align: center; }
