--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,18 +7,18 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #F6C12E; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
-#top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
+#top-header { border-bottom: 2px solid #357C44; background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #7BB455; color: #FFF; }
+#top-header #primary-nav ul li a { color: #E4A700; }
+#top-header #primary-nav ul li a:hover { background-color: #F6C12E; color: #fff; }
+#about-subscribe { background-color: #7BB455; }
+#about-subscribe h2 { color: #fff; }
 #headline { background: #3f98b5; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
@@ -38,33 +38,33 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #E4A700;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #E4A700;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #357C44; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #F6C12E; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #F6C12E;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #E4A700;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #F6C12E; }
+#scroll-top a:hover { background-color: #E4A700; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
