--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,10 +13,13 @@ h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
-#top-header #primary-nav ul li a:hover { background-color: #ddd; }
+#top-header { border-bottom: 2px solid #3f98b5; background-color: #35343A; }
+#top-header #primary-nav {
+  line-height: 7em;
+}
+#top-header #primary-nav ul li.current_page_item a { background-color: #777; color: #FFF; }
+#top-header #primary-nav ul li a { color: #fff; }
+#top-header #primary-nav ul li a:hover { background-color: #aaa; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
 #headline { background: #3f98b5; }
@@ -46,21 +49,21 @@ h3 { font-size: 1.35em; }
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #35343A; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
 footer #top-footer #social-icons li a:hover { color: #1f5964; }
-footer #bottom-footer { background-color: #27282C; color: #FFF; }
+footer #bottom-footer { background-color: #151517; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #FFC104;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #d8a200;
 }
 
 /* Scroll to top */
