--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,24 +7,23 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #f4b80a; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
-#top-header #primary-nav ul li a:hover { background-color: #ddd; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#top-header { background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #f4b80a; color: #FFF; }
+#top-header #primary-nav ul li a { color: #320000; }
+#top-header #primary-nav ul li a:hover { background-color: #320000; color: #fff; }
+#about-subscribe, #headline { background-color: #320000; }
+#about-subscribe h2 { color: #FFF; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3 a { color: #517E93; }
+.blog-post h1 a { color: #320000; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -38,33 +37,39 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #f4b80a;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #f4b80a;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #f4b80a; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
-footer #bottom-footer { background-color: #27282C; color: #FFF; }
+footer #top-footer #social-icons li a:hover { color: #320000; }
+footer #bottom-footer { background-color: #320000; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #f4b80a;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #b98c07;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #b98c07; }
+#scroll-top a:hover { background-color: #513700; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
+
+/* Custom */
+#top-header #primary-nav { padding: 50px 0; }
+@media (max-width: 767px) {
+  #top-header #primary-nav { padding: 0 !important; }
+}
