--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,19 +7,19 @@ body {
   line-height: 1.7em;
 }
 h1, h2, h3, h4 { color: #4B4B4B; }
-a { color: #3f98b5; }
+a { color: #5bc15e; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; background-color: #fff; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a { color: #3f98b5; }
+#top-header { border-bottom: 2px solid #5bc15e; background-color: #fff; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #5bc15e; color: #FFF; }
+#top-header #primary-nav ul li a { color: #5bc15e; }
 #top-header #primary-nav ul li a:hover { background-color: #ddd; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#headline { background: #5bc15e; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
@@ -38,33 +38,39 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #5bc15e;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #5bc15e;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #338C29; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #1f5964; }
+footer #top-footer #social-icons li a:hover { color: #1c4e18; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #3f98b5;
+  background-color: #FF5E00;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #177c90;
+  background-color: #d74f00;
 }
 
 /* Scroll to top */
-#scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a { background: #FF5E00; }
+#scroll-top a:hover { background-color: #d74f00; }
 #scroll-top a i { color: #FFF; }
 #scroll-top a:hover i { color: #FFF; }
+
+/* Custom */
+#top-header #primary-nav { padding: 30px 0; }
+@media (max-width: 767px) {
+  #top-header #primary-nav { padding: 0 !important; }
+}
